# zombie-dice

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  author.md  configure.sh  zdice.ini.example
include/common/: alias.hpp  constants.hpp  utils.hpp
include/zdice/config/: zdice_file.hpp  zdice_file_old.hpp
include/zdice/core/dice/: color.hpp  dice.hpp  dice_bag.hpp  face.hpp
include/zdice/core/engine/: game_controller.hpp  game_state.hpp  zdice_interface.hpp
include/zdice/core/player/: player.hpp  player_action.hpp
lib/dotini/: dotini.hpp
lib/tcolor/: tcolor.hpp
src/: main.cpp
src/zdice/dice/: dice.cpp  dice_bag.cpp
